Fix deconnexion ui on small screen + follow green theme + add white background to read the text more easy

--- a/sel-manege-angular/src/app/deconnexion/deconnexion.component.css
+++ b/sel-manege-angular/src/app/deconnexion/deconnexion.component.css
@@ -17,7 +17,7 @@ app-navbar {
 span {
     margin-top: 200px;
     color: green;
-    font-size: 12px;
+    font-size: 18px;
 }
 @media (min-width: 600px){
     span {
@@ -32,4 +32,16 @@ span {
 button {
     margin-top: 50px;
     font-size: 15px;
+    background-color: green !important;
+    color: white !important;
+}
+.deconnexionText {
+    background-color: white;
+    padding: 30px;
+    border: 2px, solid, black;
+    border-radius: 20px;
+    width: 80vw;
+    min-width: 300px;
+    max-width: 900px;
+    text-align: center;
 }
